force-app/main/default/objects/Feedback__c/Feedback__c.object-meta.xml
<CustomObject>
    <description>Feedback received from Clicktools survey&apos;s and forms</description>
    <label>Feedback</label>
    <nameField>
        <label>Feedback Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feedback</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>