force-app/main/default/objects/Feedback__c/fields/Additional_comments_Sentiments__c.field-meta.xml
<CustomField>
    <fullName>Additional_comments_Sentiments__c</fullName>
    <inlineHelpText>Additional comments text insight details</inlineHelpText>
    <label>Additional comments Sentiments</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Positive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>