force-app/main/default/objects/Feedback__c/fields/Any_feature_s_you_will_implement__c.field-meta.xml
<CustomField>
    <fullName>Any_feature_s_you_will_implement__c</fullName>
    <inlineHelpText>Did you learn of any feature(s) that you will immediately implement?</inlineHelpText>
    <label>Any feature(s) you will implement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>