force-app/main/default/objects/Feedback__c/fields/Campaign_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Owner_Id__c</fullName>
    <formula>Campaign__r.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign_Owner_Id</label>
    <type>Text</type>
</CustomField>