force-app/main/default/objects/Feedback__c/fields/Client_Alliance_Manager_was_knowledgeabl__c.field-meta.xml
<CustomField>
    <fullName>Client_Alliance_Manager_was_knowledgeabl__c</fullName>
    <inlineHelpText>Please make the appropriate selection on the items listed below in regards to the
presentation which was delivered by your Client Alliance Manager.- The Client Alliance Manager was knowledgeable.</inlineHelpText>
    <label>Client Alliance Manager was knowledgeabl</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Strongly Agree</fullName>
            </value>
            <value>
                <fullName>Agree</fullName>
            </value>
            <value>
                <fullName>Undecided</fullName>
            </value>
            <value>
                <fullName>Disagree</fullName>
            </value>
            <value>
                <fullName>Strongly Disagree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>