force-app/main/default/objects/Feedback__c/fields/Features_you_will_implement_Sentiments__c.field-meta.xml
<CustomField>
    <fullName>Features_you_will_implement_Sentiments__c</fullName>
    <inlineHelpText>Did you learn of any feature(s) that you will immediately implement?  Sentiment from text insight</inlineHelpText>
    <label>Features you will implement Sentiments</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Positive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>