force-app/main/default/objects/Feedback__c/fields/How_can_MRIS_best_enable_your_success__c.field-meta.xml
<CustomField>
    <fullName>How_can_MRIS_best_enable_your_success__c</fullName>
    <inlineHelpText>How can MRIS best enable your success?</inlineHelpText>
    <label>How can MRIS best enable your success?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>