force-app/main/default/objects/Feedback__c/fields/How_can_we_improve_on_presentation__c.field-meta.xml
<CustomField>
    <fullName>How_can_we_improve_on_presentation__c</fullName>
    <inlineHelpText>How can we improve on your experience with this presentation?</inlineHelpText>
    <label>How can we improve on presentation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>