force-app/main/default/objects/Feedback__c/fields/How_can_we_improve_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>How_can_we_improve_Sentiment__c</fullName>
    <inlineHelpText>How can we improve on your experience with this presentation? Sentiment score from Clicktools text insight</inlineHelpText>
    <label>How can we improve Sentiment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Positive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>