force-app/main/default/objects/Feedback__c/fields/If_you_could_change_1_feature_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>If_you_could_change_1_feature_Sentiment__c</fullName>
    <inlineHelpText>If you could change one MRIS system/feature, what would it be and how would you change it?  Sentiment score from Clicktools text insight.</inlineHelpText>
    <label>If you could change 1 feature Sentiment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>