force-app/main/default/objects/Feedback__c/fields/MRIS_best_enable_your_success_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>MRIS_best_enable_your_success_Sentiment__c</fullName>
    <inlineHelpText>How can MRIS best enable your success? Sentiment score from Clicktools text insight</inlineHelpText>
    <label>MRIS best enable your success Sentiment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>