force-app/main/default/objects/Feedback__c/fields/Overall_how_satisfied_were_you_with_the__c.field-meta.xml
<CustomField>
    <fullName>Overall_how_satisfied_were_you_with_the__c</fullName>
    <label>Overall, how satisfied were you</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Very Satisfied</fullName>
            </value>
            <value>
                <fullName>Satisfied</fullName>
            </value>
            <value>
                <fullName>Undecided</fullName>
            </value>
            <value>
                <fullName>Dissatisfied</fullName>
            </value>
            <value>
                <fullName>Very Dissatisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>