force-app/main/default/objects/Feedback__c/fields/Please_explain_why_you_dissatisfied__c.field-meta.xml
<CustomField>
    <fullName>Please_explain_why_you_dissatisfied__c</fullName>
    <inlineHelpText>Please explain why you were dissatisfied with the presentation and how we can improve
our service to you?</inlineHelpText>
    <label>Please explain why dissatisfied</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>