force-app/main/default/objects/Feedback__c/fields/Presentation_material_was_very_helpful__c.field-meta.xml
<CustomField>
    <fullName>Presentation_material_was_very_helpful__c</fullName>
    <inlineHelpText>Please make the appropriate selection on the items listed below in regards to the
presentation which was delivered by your Client Alliance Manager.- The presentation material was very helpful</inlineHelpText>
    <label>Presentation material was very helpful</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Strongly Agree</fullName>
            </value>
            <value>
                <fullName>Agree</fullName>
            </value>
            <value>
                <fullName>Undecided</fullName>
            </value>
            <value>
                <fullName>Disagree</fullName>
            </value>
            <value>
                <fullName>Strongly Disagree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>