force-app/main/default/objects/Feedback__c/fields/Presenter_addressed_questions_concerns__c.field-meta.xml
<CustomField>
    <fullName>Presenter_addressed_questions_concerns__c</fullName>
    <inlineHelpText>Did the presenter address all of your questions and concerns?</inlineHelpText>
    <label>Presenter addressed questions concerns</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>The presenter will get back to me about m question</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>