force-app/main/default/objects/Feedback__c/fields/Quality_of_presentation_highly_effective__c.field-meta.xml
<CustomField>
    <fullName>Quality_of_presentation_highly_effective__c</fullName>
    <inlineHelpText>Please make the appropriate selection on the items listed below in regards to the
presentation which was delivered by your Client Alliance Manager - The quality of presentation was highly effective</inlineHelpText>
    <label>Quality of presentation highly effective</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Strongly Agree</fullName>
            </value>
            <value>
                <fullName>Agree</fullName>
            </value>
            <value>
                <fullName>Undecided</fullName>
            </value>
            <value>
                <fullName>Disagree</fullName>
            </value>
            <value>
                <fullName>Strongly Disagree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>