force-app/main/default/objects/Feedback__c/fields/Read_Only_survey_link__c.field-meta.xml
<CustomField>
    <fullName>Read_Only_survey_link__c</fullName>
    <inlineHelpText>This link my possibly be only valid for 90 days.</inlineHelpText>
    <label>Read Only survey link</label>
    <type>Url</type>
</CustomField>