force-app/main/default/objects/Feedback__c/fields/Survey_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>Survey_Response_Date__c</fullName>
    <inlineHelpText>Date the survey was submitted.</inlineHelpText>
    <label>Survey Response Date</label>
    <type>Date</type>
</CustomField>