force-app/main/default/objects/Feedback__c/fields/What_one_system_feature_would_you_change__c.field-meta.xml
<CustomField>
    <fullName>What_one_system_feature_would_you_change__c</fullName>
    <inlineHelpText>If you could change one MRIS system/feature, what would it be and how would you change it?</inlineHelpText>
    <label>What one system/feature would you change</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>