force-app/main/default/objects/Feedback__c/fields/Why_dissatisfied_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Why_dissatisfied_Sentiment__c</fullName>
    <inlineHelpText>Values are populated from Clicktools text insight based on how the essay question was responded to.</inlineHelpText>
    <label>Why dissatisfied Sentiment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Positive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>