force-app/main/default/objects/Feedback__c/listViews/avneet_s_view.listView-meta.xml
<ListView>
    <fullName>avneet_s_view</fullName>
    <columns>NAME</columns>
    <columns>Campaign__c</columns>
    <columns>Survey_Response_Date__c</columns>
    <columns>Overall_how_satisfied_were_you_with_the__c</columns>
    <filterScope>Everything</filterScope>
    <label>avneet&apos;s view</label>
</ListView>